<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Events</string>
    <string name="events_text">Events</string>
    <string name="event_text">Event</string>
    <string name="my_events_text">My events</string>
    <string name="profile_text">Profile</string>
    <string name="settings_text">Settings</string>
    <string name="theme_text">Dark app theme:</string>
    <string name="translate_text">Change app language</string>
    <string name="translate_header">Change language</string>
    <string name="russian_text">Русский</string>
    <string name="english_text">English</string>
    <string name="search_events_hint">Find an event</string>
    <string name="run_text">Participate</string>
    <string name="description_text">Open description</string>
    <string name="filters_text">Filters</string>
    <string name="internal_text">Internal</string>
    <string name="external_text">External</string>
    <string name="any_tag_text">Any</string>
    <string name="logout_text">Logout</string>
    <string name="logout_body_text">Are you sure you want to log out of your account?</string>
    <string name="yes_text">Yes</string>
    <string name="no_text">No</string>
    <string name="warning_text">Attention</string>
    <string name="warning_body_text">Are you sure you want to unregister for this event?</string>
    <string name="location_text">Location</string>
    <string name="human_count_text">Already participating:</string>
    <string name="event_page_text">Event page</string>
    <string name="cancel_event_text">Cancel registration</string>
    <string name="clean_profile_text">To register for events, authorization is required in the system.</string>
    <string name="sing_in_text_lk">Login through your personal account</string>
    <string name="sing_in_text">Login</string>
    <string name="logout_button_text">Sign out</string>
    <string name="scanner_text">The QR code must be in a frame to be scanned</string>
    <string name="confirm_participation">Confirm presence</string>
    <string name="login_hint_text">Enter username or email</string>
    <string name="password_hint_text">Enter password</string>

    <string name="confirmation_error_title">Error</string>
    <string name="confirmation_error_body">Failed to confirm user participation in this event.</string>
    <string name="ok_text">OK</string>

    <string name="confirmation_successful_title">Success</string>
    <string name="confirmation_successful_body">Participation in the event has been successfully confirmed.</string>

    <string name="nav_presence">Presence</string>
    <string name="presence_confirmation_text">Presence confirmation</string>

    <string name="event_name">Event title:</string>
    <string name="event_tags">Event tags:</string>
    <string name="event_date">Date and time of the event:</string>
    <string name="event_desc">Description of the event:</string>
    <string name="event_location">Location:</string>
    <string name="event_reg_from">Registration available from:</string>
    <string name="event_reg_to">Registration is available until:</string>
    <string name="event_org">Organizers:</string>
    <string name="stats_text">Event statistics</string>

    <string name="table_num_text">№</string>
    <string name="table_name_text">Name of the Student</string>
    <string name="table_group_text">Group</string>
    <string name="table_pres_text">Present</string>
    <string name="table_role_text">Role</string>
    <string name="table_pres_presence_noted_text">Presence noted</string>

    <string name="network_error_text">Network connection error.\nTry refreshing the page</string>
    <string name="refresh_text">Refresh</string>

    <string name="login_text">Login</string>
    <string name="student_text">Student</string>
    <string name="org_text">Organizer</string>

    <string name="error">Error</string>

    <string name="no_event">No registered events found</string>
</resources>