<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="5dp"
    tools:context=".Activity.EventInfoActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.synnapps.carouselview.CarouselView
                android:id="@+id/infoImagesVies"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:fillColor="#FFFFFFFF"
                app:pageColor="#00000000"
                app:radius="6dp"
                app:slideInterval="3000"
                app:strokeColor="#FF777777"
                app:strokeWidth="1dp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/event_name" />

            <TextView
                android:id="@+id/eventTitleInfoText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:inputType="textMultiLine"
                android:text="TextView"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/event_tags" />

            <TextView
                android:id="@+id/eventTagsInfoText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:inputType="textMultiLine"
                android:text="TextView"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/event_date" />

            <TextView
                android:id="@+id/dateInfoText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:inputType="textMultiLine"
                android:text="TextView"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/event_desc" />

            <TextView
                android:id="@+id/descInfoText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:inputType="textMultiLine"
                android:text="TextView"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/event_location" />

            <TextView
                android:id="@+id/locationInfoText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:inputType="textMultiLine"
                android:text="TextView"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/event_reg_from" />

            <TextView
                android:id="@+id/regFromInfoText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:inputType="textMultiLine"
                android:text="TextView"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/event_reg_to" />

            <TextView
                android:id="@+id/regToInfoText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:inputType="textMultiLine"
                android:text="TextView"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/event_org" />

            <TextView
                android:id="@+id/orgInfoText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:inputType="textMultiLine"
                android:text="TextView"
                android:textStyle="bold" />

            <Button
                android:id="@+id/statsButton"
                style="@style/Widget.Material3.Button.OutlinedButton.Icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:text="@string/stats_text"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:icon="@drawable/icon_statistic"
                app:iconPadding="10dp"
                app:iconTint="@color/white"
                app:strokeColor="@color/green_color"
                android:backgroundTint="@color/green_color"
                app:strokeWidth="2dp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>