<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/bg_dialog_color"
    app:cardCornerRadius="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|top"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="30dp"
            app:srcCompat="@drawable/icon_profile" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:text="@string/login_text"
            android:textAlignment="center"
            android:textColor="@color/green_color"
            android:textSize="24sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/student_rbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:checked="false"
            android:text="@string/student_text"
            android:textAlignment="textStart"
            android:textColor="@color/green_color"
            android:textSize="16dp" />

        <RadioButton
            android:id="@+id/org_rbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="15dp"
            android:text="@string/org_text"
            android:textColor="@color/green_color"
            android:textSize="16dp" />

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
